--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "husky": "^4.3.8",
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "lint-staged": "^12.3.2"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*js": ["eslint", "jest --findRelatedTests"]
   }
 }
